<resources>
    <string name="app_name">Cashier_Receipt_Module</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cashiers">Cajeros</string>
    <string name="menu_clients">Clientes</string>

    <!-- LABELS -->
    <string name="title_cashiers">Cajeros</string>
    <string name="title_add_cashier">Formulario de Cajero</string>
    <string name="label_code">Código</string>
    <string name="label_name">Nombre</string>

    <!-- BUTTONS -->
    <string name="button_cancel">Cancelar</string>
    <string name="button_save">Guardar</string>
    <string name="add_cashier_btn">Agregar Cajero</string>
    <string name="name_label">Nombre:</string>
    <string name="title_comfirm_delete">Eliminar registro</string>
    <string name="confirm_delete_question">¿Esta seguro de querer eliminar este registro?</string>
    <string name="delete_button" >Eliminar</string>
    <string name="title_add_client" >Formulario de Cliente</string>
    <string name="add_client_btn">Agregar Cliente</string>
    <string name="add_pay_btn">Agregar Recibo</string>
    <string name="title_form_pay">Formulario de Recibos</string>
</resources>