<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cashier_receipt_module.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cashiers"
        android:name="com.example.cashier_receipt_module.ui.cajeros.CashiersFragment"
        android:label="@string/menu_cashiers"
        tools:layout="@layout/fragment_cashiers" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.example.cashier_receipt_module.ui.clientes.ClientsFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients" />
</navigation>