<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingVertical="@dimen/dialog_vertical_padding"
        android:text="@string/title_comfirm_delete"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dialog_horizontal_padding"
        android:paddingVertical="@dimen/dialog_vertical_padding">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/confirm_delete_question"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Space
                android:layout_width="@dimen/input_spacing"
                android:layout_height="@dimen/input_spacing"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_button" />

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>