<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_cashier"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:paddingVertical="@dimen/dialog_vertical_padding"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dialog_horizontal_padding"
        android:paddingVertical="@dimen/dialog_vertical_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name_semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_code"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_description_semester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Space
                android:layout_width="@dimen/input_spacing"
                android:layout_height="@dimen/input_spacing"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save"/>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>