<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingVertical="@dimen/dialog_vertical_padding"
        android:text="@string/title_form_pay"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dialog_horizontal_padding"
        android:paddingVertical="@dimen/dialog_vertical_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_number_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Número"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing"
            android:hint="Cliente"
            app:startIconDrawable="@drawable/ic_name">

            <AutoCompleteTextView
                android:id="@+id/client_filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing"
            android:hint="Cajero"
            app:startIconDrawable="@drawable/ic_atm_mini">

            <AutoCompleteTextView
                android:id="@+id/cashier_filled_exposed_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_spacing"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_amount_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Monto"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">
            <Button
                android:id="@+id/active_payment_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Activo"
                style="?attr/materialButtonOutlinedStyle" />
            <Button
                android:id="@+id/inactive_payment_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Inactivo"
                style="?attr/materialButtonOutlinedStyle" />
            <Button
                android:id="@+id/deleted_payment_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Eliminado"
                style="?attr/materialButtonOutlinedStyle" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Space
                android:layout_width="@dimen/input_spacing"
                android:layout_height="@dimen/input_spacing"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save"/>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>